@@ -5,6 +5,7 @@ Changelog
 	+ Added ``--debug-info`` command line option (for *FireSass* output).
 	+ Added compass helper function ``reject()``.
 	+ Added ``undefined`` keyword for undefined variables.
+	+ Fix cache buster URLs when paths already include queries or fragments.
 
 1.1.3 Jan 9, 2012
 	+ Support for the new Sass 3.2.0 features (``@content`` and placeholder selectors)
